# testdsn

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  IMPLEMENT.md  README.md  REPOSITORY_STAGE  VALIDATION.md
.codex/: config.toml
crates/overlay-core/: Cargo.toml
crates/overlay-core/src/: config.rs  error.rs  identity.rs  ids.rs  lib.rs  runtime.rs  time.rs
crates/overlay-core/src/bootstrap/: client.rs  mod.rs  providers.rs
crates/overlay-core/src/crypto/: aead.rs  hash.rs  kdf.rs  kex.rs  mod.rs  sign.rs
crates/overlay-core/src/metrics/: events.rs  mod.rs
crates/overlay-core/src/peer/: diversity.rs  manager.rs  mod.rs  state.rs
crates/overlay-core/src/records/: intro.rs  mod.rs  node.rs  presence.rs  relay.rs  service.rs
crates/overlay-core/src/relay/: manager.rs  mod.rs  quota.rs  scoring.rs
crates/overlay-core/src/rendezvous/: lookup.rs  mod.rs  placement.rs  publish.rs
crates/overlay-core/src/routing/: metrics.rs  mod.rs  probes.rs  scoring.rs  switch.rs
crates/overlay-core/src/service/: mod.rs  registry.rs  session.rs
crates/overlay-core/src/session/: handshake.rs  manager.rs  mod.rs  state.rs
crates/overlay-core/src/store/: mod.rs  peer_store.rs  presence_store.rs  replay_cache.rs  service_store.rs
crates/overlay-core/src/transport/: mod.rs  quic.rs  relay.rs  tcp.rs  traits.rs  ws.rs
crates/overlay-core/src/wire/: codec.rs  frame.rs  messages.rs  mod.rs
crates/overlay-core/tests/: integration_bootstrap.rs  integration_publish_lookup.rs  integration_relay_fallback.rs  integration_routing.rs  integration_service_open.rs  integration_session_handshake.rs
devnet/: README.md  package-release.sh  run-distributed-pilot-checklist.sh  run-distributed-smoke.sh  run-doctor-smoke.sh  run-smoke.sh  (+9 more)
(+121 files in other folders)
