[workspace]
resolver = "2"
members = [
  "crates/overlay-core",
  "crates/overlay-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Viacheslav Artemenkov"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
blake3 = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
hex = "0.4"
