[workspace]
resolver = "2"
members = ["crates/overlay-core", "crates/overlay-cli"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Viacheslav Artemenkov"]

[workspace.dependencies]
blake3 = "1"
chacha20poly1305 = "0.10"
ed25519-dalek = "2"
getrandom = "0.2"
hkdf = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
