[package]
name = "overlay-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
blake3.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
hex.workspace = true
